@@ -958,6 +958,13 @@
 #endif
 
 
+/* Define to 1 if we found a declaration for 'mallinfo', otherwise define to
+   0. */
+#ifndef USED_FOR_TARGET
+#undef HAVE_DECL_MALLINFO
+#endif
+
+
 /* Define to 1 if we found a declaration for 'malloc', otherwise define to 0.
    */
 #ifndef USED_FOR_TARGET
@@ -1624,6 +1631,12 @@
 /* Define to 1 if you have the `madvise' function. */
 #ifndef USED_FOR_TARGET
 #undef HAVE_MADVISE
+#endif
+
+
+/* Define to 1 if you have the `mallinfo' function. */
+#ifndef USED_FOR_TARGET
+#undef HAVE_MALLINFO
 #endif
 
 
