@@ -1,3 +1,8 @@
+2019-11-02  Jan Hubicka  <hubicka@ucw.cz>
+
+	* lto-common.c (read_cgraph_and_symbols): Improve -Q reporting.
+	* lto.c (lto_wpa_write_files): Likewise.
+
 2019-10-31  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/92231
